[package]
name = "rusty_warp_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = {version = "0.3", features = ["tls"] }
futures = "0.3.8"

[dev-dependencies]
rusty-hook = "^0.11.2"
